style.css
* {
    box-sizing: border-box;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

body {
    background-color: rgb(241, 238, 238);


}

.container {

    margin: 5% auto 8% auto;
    width: 80%;
    height: 90%;
    gap: 7%;

}

.item {
    display:grid;
    grid-template-rows: auto auto auto auto;
    place-items: center;
    text-align: center;
    border-top-left-radius: 1%;
    background-color: white;
    padding: 15%
    
}

button {
    border: none;
    background: none;
    text-transform: uppercase;
    color: rgb(151, 146, 146);
    font-weight: bold;

}

button:hover {
    border-radius: 30px;
    background-color: rgb(180, 176, 176);
    color: white;
}

h3 {
    font-weight: lighter;
}


img {
    border-radius: 50%;    
    width: 60%;
}

.needBorder {
    border: solid rgb(231, 226, 226) 1px;
}

@media all and (min-width: 1px) and (max-width:480px) {

    .container {
        display: grid;
        grid-template-columns: 100%;
        column-gap: 2%;
        row-gap: 1%;
        padding-bottom: 15;
    }


    h3 {
        font-size: 3vw;

    }

    p {
        font-size: 2.5vw;

    }

    button {
        font-size: 3vw;

    }


}


@media all and (min-width: 481px) and (max-width:768px) {

    .container {
        display: grid;
        grid-template: repeat(4, auto)/ repeat(2, 1fr);


    }

    h3 {
        font-size: 2.5vw;

    }

    p {
        font-size: 2vw;

    }
    button {
        font-size: 2vw;

    }



}

@media all and (min-width: 769px) {

    .container {
        display: grid;
        grid-template: repeat(2, auto)/ repeat(4, 1fr);
        /*! column-gap: 15px; */
    }

    h3 {
        font-size: 1.5vw;

    }

    p {
        font-size: 1vw;

    }

    button {
        font-size: 1vw;

    }

}

